--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.alternate.alternate_store_cms">
+    package="com.asher.asher_store_cms">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     
    <application
-        android:label="alternate_store_cms"
+        android:label="asher_store_cms"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
