--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: alternate_store_cms
+name: asher_store_cms
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -35,15 +35,12 @@ dependencies:
   firebase_auth: 
   cloud_firestore: 
   firebase_storage: 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  get:
   cupertino_icons: 
   provider: 
   shared_preferences: 
   badges: 
   image_picker: 
-  # permission_handler: 
   flutter_slidable: 
   cached_network_image: 
 
@@ -74,7 +71,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - lib/assets/icon/
+    - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
