--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "alternate_store_cms",
-    "short_name": "alternate_store_cms",
+    "name": "asher_store_cms",
+    "short_name": "asher_store_cms",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
