--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   provider: 
   shared_preferences: 
   badges: 
-  image_picker: 
   flutter_slidable: 
   cached_network_image: 
+  image_picker: ^0.8.4+4
+  
 
 dev_dependencies:
   flutter_test:
