--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,25 @@ dependencies:
     sdk: flutter
     
 # Flutter Fire
-  firebase_core: 
-  firebase_auth: 
-  cloud_firestore: 
-  firebase_storage: 
-  get:
-  cupertino_icons: 
+  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
+  cloud_firestore: ^3.1.6
+  firebase_storage: ^10.2.5
+  get: ^4.6.1
+  
   #
-  provider: 
-  shared_preferences: 
-  badges: 
-  flutter_slidable: 
-  cached_network_image: 
+  flutter_slidable: ^1.2.0
+  cached_network_image: ^3.2.0
   image_picker: ^0.8.4+4
+  badges: ^2.0.2
+  shared_preferences: ^2.0.12
+  flutter_launcher_icons: ^0.9.2
+  cupertino_icons: ^1.0.4
+
+flutter_icons:
+  image_path: "assets/icon/ic_lancher_cms.png"
+  android: true
+  ios: true
   
 
 dev_dependencies:
